# oc-projet_13

./: .coverage  .coveragerc  .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  oc-lettings-site.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: build-app.yml  build-python-app.yml  python-app-build.yml  python-app.yml
doc/source/: api_reference.rst  conf.py  database_schema.rst  deployment.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  tech_stack.rst  usage_guide.rst
lettings/: models.py  tests.py  views.py
lettings/migrations/: 0001_initial.py
lettings/templates/lettings/: index.html  letting.html
oc_lettings_site/: admin.py  settings.py  tests.py  urls.py  views.py
oc_lettings_site/migrations/: 0003_delete_profile.py
oc_lettings_site/templates/: 404.html  base.html  index.html
profiles/: conftest.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
profiles/templates/profiles/: profile.html
src/fixtures/: demo.json
src/lettings/: conftest.py  models.py  urls.py
src/lettings/migrations/: 0002_alter_address_options.py
src/lettings/templates/lettings/: letting.html
src/oc_lettings_site/: settings.py  urls.py  views.py
src/oc_lettings_site/migrations/: 0002_remove_letting_address_delete_address_delete_letting.py
src/oc_lettings_site/templates/: 500.html  base.html  index.html
src/profiles/: models.py  tests.py
src/profiles/templates/profiles/: index.html
static/css/: custom-style.css
